added signup page. Make it responsive

--- a/app/globals.css
+++ b/app/globals.css
@@ -40,6 +40,13 @@ body {
     @apply ring-2 focus:ring-[#7e89ed] focus:border-[#7e89ed];
   }
 
+  .dob-selector {
+    @apply appearance-none w-auto border-2 
+     border-gray-300 rounded-full px-7 py-2 bg-auto text-gray-500 font-medium 
+     focus:ring-2 focus:ring-indigo-200 focus:border-indigo-200 outline-none 
+      bg-[url('/chevron-down.svg')] bg-no-repeat bg-[right_0.75rem_center] pr-10;
+  }
+
   /* Text Button: Simple Text */
   .btn-text {
     @apply px-4 py-2 bg-transparent font-normal text-sm transition-colors;
