fixed the routing, dynamic Navbar, Login
- OAuth done with Google as other need paid dev accounts
- Login/Signup APIs done
- Sessions and Tokens integrated in working condition
- Navbar made dynamic based on the login state
- Differentiate the components so that only necessary small chunks are "use client" and keep bigger chunk on server

- Tomorrow Onboarding should be done with other UI layouts

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 :root {
   color-scheme: dark;
-  --background: #050624;
+  --background: #0a092d;
   --foreground: #ffffff;
   --primary: #4255ff;
   --primaryHover: #423ed8;
