Payment page ui completed
Today complete all of the ui pages. Final deadline to start the backend ASAP

--- a/app/globals.css
+++ b/app/globals.css
@@ -83,3 +83,12 @@ body {
     color: var(--primaryHover);
   }
 }
+
+@media (max-width: 768px) {
+  .desk {
+    display: none;
+  }
+  .mob {
+    display: block;
+  }
+}
