--- a/app/globals.css
+++ b/app/globals.css
@@ -1,43 +1,30 @@
 @import "tailwindcss";
 :root {
-  color-scheme: dark;
   --background: #0a092d;
   --foreground: #ffffff;
   --primary: #4255ff;
   --primaryHover: #423ed8;
-  --primary-gray: #050624;
-  --latest-card: #2e3856;
-  --latest-image: #586380;
+  --cardColor: #2e3856;
+  --cardColorHover: #586380;
 }
-/*
-:root[data-theme="light"] {
-   --background: #f6f7fb;
-  --foreground: #171717;
+
+[data-theme="light"] {
+  --background: #ffffff;
+  --foreground: #0a092d;
   --primary: #4255ff;
   --primaryHover: #423ed8;
-  --primary-gray: #f3f4f6;
-  --latest-card: #b8c2e0;
-  --latest-image: #586380; 
+  --cardColor: #f6f7fb;
+  --cardColorHover: #edeff4;
+}
 
-  --background: #050624;
+[data-theme="dark"] {
+  --background: #0a092d;
   --foreground: #ffffff;
   --primary: #4255ff;
   --primaryHover: #423ed8;
-  --primary-gray: #050624;
-  --latest-card: #2e3856;
-  --latest-image: #586380;
+  --cardColor: #2e3856;
+  --cardColorHover: #586380;
 }
-
-:root[data-theme="dark"] {
-  --background: #050624;
-  --foreground: #ffffff;
-  --primary: #4255ff;
-  --primaryHover: #423ed8;
-  --primary-gray: #050624;
-  --latest-card: #2e3856;
-  --latest-image: #586380;
-}
-  */
 
 body {
   background: var(--background);
