Most modules completed - see desc
- Changed and Integrated attempt.
- Shown Success screen with attempt stats at the end of completion of test
- Made Sidebar dynamic according to route
- Added user-library route to get user created data
- Created new dynamic progress bar for /learn route
-  Added Confetti in ap using script tag
- Search header made usable in /search and /library
- Attempt progress added
- Integrated openai sdk and /ai route in app to create the quizzes/flashcards using deepseek
- changed logo and primary color
- favIcon.ico changed
- copied new folder structure to follow in refactoring from medium article
- new types created in /typesapi.ts for other prisma queries

IMPORTANT:
- Finalised Redis/BullMQ/SocketIO tomorrow for background jobs and changed schema.prisma
- secure apis to restrict browser only and not available to everyone
- restrict user for openai calls
- deploy
- If possible do refactoring based on new architecture

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@
 :root {
   --background: #0a092d;
   --foreground: #ffffff;
-  --primary: #4255ff;
+  --primary: #2293e5;
   --primaryHover: #423ed8;
   --cardColor: #2e3856;
   --cardColorHover: #586380;
@@ -17,7 +17,7 @@
 :root[data-theme="light"] {
   --background: #ffffff;
   --foreground: #0a092d;
-  --primary: #4255ff;
+  --primary: #2293e5;
   --primaryHover: #423ed8;
   --cardColor: #f6f7fb;
   --cardColorHover: #edeff4;
@@ -30,7 +30,7 @@
 :root[data-theme="dark"] {
   --background: #0a092d;
   --foreground: #ffffff;
-  --primary: #4255ff;
+  --primary: #2293e5;
   --primaryHover: #423ed8;
   --cardColor: #2e3856;
   --cardColorHover: #586380;
